<resources>
    <string name="app_name">saqibhandymanab</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_jun">Jun</string>
<string name="lbl_jul">Jul</string>
<string name="lbl_l">L</string>
<string name="lbl_m">M</string>
<string name="msg_minnie_email_co">minnie@email.com</string>
<string name="lbl_n">n</string>
<string name="lbl_logout">Logout</string>
<string name="msg_don_t_have_an_a">Don\u2019t have an account ?</string>
<string name="lbl_at_3_00_pm">At 3:00 PM</string>
<string name="lbl_s">S</string>
<string name="lbl_t">T</string>
<string name="lbl_w">W</string>
<string name="lbl_y">y</string>
<string name="lbl_4_pm"> 4 Pm</string>
<string name="msg_your_payment_wi">Your payment will proceed after the working session </string>
<string name="lbl_thomas_lukas2">Thomas Lukas</string>
<string name="lbl_total_service">Total Service</string>
<string name="msg_fixture_replace">Fixture replacement</string>
<string name="lbl_minnie_ramsey">Minnie Ramsey</string>
<string name="lbl_23_mar_2022">23 Mar, 2022</string>
<string name="lbl_56">56</string>
<string name="lbl_44_minutes">44 minutes</string>
<string name="lbl_sep">Sep</string>
<string name="lbl_see">See</string>
<string name="lbl_250">\u20ac250</string>
<string name="lbl_f">F</string>
<string name="lbl_in_progress">In Progress</string>
<string name="lbl_252">\u20ac25</string>
<string name="lbl_date">Date: </string>
<string name="msg_make_a_follow_u">Make a follow-up appointment</string>
<string name="lbl_last_name">Last name</string>
<string name="lbl_ha_ha_lol">Ha ha.. lol </string>
<string name="lbl_002">:00</string>
<string name="lbl_125">\u20ac125</string>
<string name="lbl_about_handyman">About Handyman</string>
<string name="msg_date_23_mar_2">Date: 23 Mar, 2022</string>
<string name="lbl_2_44_pm">2:44 PM</string>
<string name="lbl_details">details</string>
<string name="msg_thomaslukas_ema">thomaslukas@email.com</string>
<string name="lbl_smart_home">Smart home</string>
<string name="lbl_welcome">Welcome!</string>
<string name="lbl_apr">Apr</string>
<string name="lbl_30">30</string>
<string name="msg_give_thomas_a_r">Give Thomas a rating</string>
<string name="lbl_completed">Completed</string>
<string name="lbl_hello_minnie">Hello Minnie!</string>
<string name="lbl_on_going">On Going</string>
<string name="msg_service_provide">Service providers</string>
<string name="lbl_password">Password</string>
<string name="lbl_gilbert_weaver">Gilbert Weaver</string>
<string name="lbl_wall_painting">wall painting</string>
<string name="lbl_jan">Jan</string>
<string name="lbl_4_minutes">4 minutes</string>
<string name="msg_write_a_message">Write a message\u2026</string>
<string name="msg_payment_option">Payment  options</string>
<string name="msg_started_at_08">Started at: 08:30</string>
<string name="msg_at_leat_8_chara">at leat 8 characters</string>
<string name="msg_jan_21_2022_a">Jan 21, 2022  at 4 Pm</string>
<string name="msg_your_handyman_f">Your handyman finished the work. 
Your total cost is \u20ac122.5 for
3 hours and 44 minutes. </string>
<string name="lbl_see_details">see details</string>
<string name="lbl_20">20</string>
<string name="lbl_project_photos">Project photos</string>
<string name="lbl_23">23</string>
<string name="lbl_24">24</string>
<string name="lbl_21">21</string>
<string name="lbl_22">22</string>
<string name="msg_you_worked_for">You worked for Minnie for 
3 hours and 44 minutes</string>
<string name="lbl_27">27</string>
<string name="lbl_message">Message</string>
<string name="lbl_28">28</string>
<string name="lbl_25">25</string>
<string name="lbl_26">26</string>
<string name="msg_see_available_w">See available workers</string>
<string name="msg_total_earning_t">Total Earning this
 month </string>
<string name="lbl_29">29</string>
<string name="lbl_categories">Categories</string>
<string name="lbl_chat">Chat</string>
<string name="lbl_4_5">4.5</string>
<string name="lbl_time_09_19_pm">Time: 09:19 PM</string>
<string name="lbl_finish">Finish</string>
<string name="msg_5_reasons_to_pu">5 Reasons To Purchase Desktop\u2026</string>
<string name="lbl_email2">email</string>
<string name="lbl_4_6">4.6</string>
<string name="lbl_handyman">Handyman</string>
<string name="msg_at_least_8_char">at least 8 characters</string>
<string name="lbl_maude_ortiz">Maude Ortiz</string>
<string name="msg_yes_it_is_all">"Yes, it is all right. I wanted to know because after 5 o'clock I can't be home"</string>
<string name="lbl_12">12</string>
<string name="lbl_13">13</string>
<string name="lbl_statistics">Statistics</string>
<string name="lbl_10">10</string>
<string name="lbl_sign_up">Sign Up</string>
<string name="lbl_11">11</string>
<string name="lbl_16">16</string>
<string name="lbl_17">17</string>
<string name="lbl_14">14</string>
<string name="lbl_15">15</string>
<string name="lbl_18">18</string>
<string name="lbl_19">19</string>
<string name="lbl_nov">Nov</string>
<string name="lbl_minnie">Minnie</string>
<string name="msg_for_several_mon">For several months, I have been hearing the slow trickle of water behind the wall of my third floor bathroom in my Cobble Hill brownstone. I had Weiss plumbing come once to check it out and the guy basically leaned close to the wall and said \u2018I don\u2019t hear anything\u2019. Since I wanted to believe he was right, I let it go. This was about eight months ago.</string>
<string name="lbl_for">for
</string>
<string name="lbl_save">Save</string>
<string name="lbl_thomas_lukas">Thomas lukas</string>
<string name="lbl_at">at</string>
<string name="msg_ok_great_than">Ok! Great! Thank you very much</string>
<string name="lbl_share">Share</string>
<string name="lbl_log_in2">Log in </string>
<string name="lbl_jared_long">Jared Long</string>
<string name="lbl_any_hour">Any hour</string>
<string name="msg_you_worked_for2">You worked for Minnie for 
</string>
<string name="msg_leaks_in_the_ba">Leaks in the bathroom wall</string>
<string name="lbl_search_chats">Search Chats</string>
<string name="lbl_122_5">\u20ac122.5</string>
<string name="lbl_started_at">Started at:</string>
<string name="lbl_00">00</string>
<string name="lbl_aug">Aug</string>
<string name="lbl_thomas">Thomas</string>
<string name="lbl_payment_details">Payment details</string>
<string name="lbl_booking_section">Booking Section</string>
<string name="lbl_4_pm2">4 Pm</string>
<string name="msg_38_chestnut_str">38 Chestnut StreetStaunton</string>
<string name="lbl_wall_decoration">wall decoration</string>
<string name="lbl_ukas">ukas</string>
<string name="msg_select_your_acc">Select your account type and 
Log In</string>
<string name="lbl_and2"> and </string>
<string name="msg_settings_and_pr">Settings and Privacy</string>
<string name="lbl_order_summar">Order summar</string>
<string name="msg_public_profile">Public profile details</string>
<string name="msg_the_wall_with_w">"The wall with water infiltration is 5 square meters. Can you tell me how long it would take you to fix it in Friday's meeting?"</string>
<string name="msg_your_total_earn">Your total earning is 
\u20ac122.5</string>
<string name="msg_upcoming_servic">Upcoming Services</string>
<string name="msg_small_appliance">Small appliance repair</string>
<string name="lbl_45_hr">\u20ac 45/hr</string>
<string name="lbl_feb">Feb</string>
<string name="lbl_confirmed">Confirmed</string>
<string name="lbl_last_name2">last name</string>
<string name="lbl_reviews">Reviews</string>
<string name="msg_nothing_to_comp2">Nothing to complain. A good guy with good service. Hope to have him sent the next service order</string>
<string name="lbl_order_summary">Order summary</string>
<string name="lbl_book">Book</string>
<string name="msg_nothing_to_comp">Nothing to complain. A good guy with good service. Hope to have him sent to the next service order</string>
<string name="msg_describe_your_p">Describe your problem</string>
<string name="lbl2">. </string>
<string name="lbl_hello_thomas">Hello Thomas</string>
<string name="lbl_first_name">First name</string>
<string name="msg_already_have_an">Already have an account ?</string>
<string name="lbl_25_hr2">\u20ac25/hr</string>
<string name="msg_les_houches_the">Les Houches The Hidden Gem Of \u2026</string>
<string name="msg_in_this_case_y">"In this case, you can reschedule the meeting a few hours earlier. I'm free that morning"</string>
<string name="lbl_dd_mm_yy">dd/mm/yy</string>
<string name="lbl_december_2022">December 2022</string>
<string name="msg_already_have_aa">Already have aaccount? ?</string>
<string name="msg_today_s_service">Today\u2019s Services</string>
<string name="lbl_08_30"> 08:30</string>
<string name="lbl_may">May</string>
<string name="lbl_are_you_there">Are you there?</string>
<string name="msg_forgot_password">Forgot password?</string>
<string name="lbl_00_00_am">00:00 AM</string>
<string name="lbl_wall_repair2">wall repair</string>
<string name="lbl_mar">Mar</string>
<string name="lbl_plumping">plumping</string>
<string name="lbl_profile_details"> Profile details</string>
<string name="lbl_cancel">Cancel </string>
<string name="lbl_i_m_a_customer">I\u2019m a customer</string>
<string name="msg_your_booking_ha">Your booking has been confirmed for 
Jan 4th, 2022
Check the Booking Section for details</string>
<string name="lbl_repeat_password">Repeat password</string>
<string name="lbl_apply_coupon">Apply Coupon</string>
<string name="msg_appliance_repai">Appliance repair</string>
<string name="lbl_alright2">Alright  &#128077;</string>
<string name="msg_total_invoice_c">Total invoice cost</string>
<string name="lbl_painting">Painting</string>
<string name="msg_your_total_earn2">Your total earning is 
</string>
<string name="lbl_03_22">03 : 22</string>
<string name="lbl_for_details">for details</string>
<string name="lbl_alright">Alright  </string>
<string name="msg_don_t_have_an_a2">Don\u2019t have an account?</string>
<string name="lbl_logan_chavez">Logan Chavez</string>
<string name="lbl_2025">2025</string>
<string name="lbl_2024">2024</string>
<string name="lbl_2023">2023</string>
<string name="lbl_2022">2022</string>
<string name="lbl_pending">Pending</string>
<string name="lbl_3_5">3.5</string>
<string name="msg_it_will_probabl">It will probably take me 5 hours. 
Is it ok for you?</string>
<string name="lbl_09_30_am">09:30 AM</string>
<string name="lbl_09_19_pm">09:19 PM</string>
<string name="lbl_cooking_for_one">Cooking For One</string>
<string name="lbl_time">Time: </string>
<string name="lbl_right_now">Right now</string>
<string name="msg_your_booking_ha2">Your booking has been confirmed for 
</string>
<string name="lbl_oct">Oct</string>
<string name="msg_mike_was_our_ha">Mike was our Handyman. He went above and beyond the call of duty. All of his work was first class, quick and professional.</string>
<string name="msg_hardworking_and">Hardworking and experienced Handyman able to perform a variety of maintenance duties with skill. Adept in handling preventative maintenance, basic repairs, cosmetic upkeep, and simple appliance installations. Ability to handle power tools and some maintenance related machinery.</string>
<string name="lbl_08_11_2022">08/11/2022</string>
<string name="lbl_back_home">Back Home</string>
<string name="lbl_hours"> hours</string>
<string name="msg_we_are_looking">We are looking for you</string>
<string name="lbl_dec">Dec</string>
<string name="lbl_jerrik">Jerrik</string>
<string name="lbl_date2">Date</string>
<string name="msg_what_services_a">What services are you looking for?</string>
<string name="lbl_erna_else">Erna Else</string>
<string name="lbl_gardening">Gardening</string>
<string name="lbl_vernon_powell">Vernon Powell</string>
<string name="msg_see_you_on_frid">See you on Friday morning!</string>
<string name="lbl_first_name2">first name</string>
<string name="lbl_email">Email</string>
<string name="lbl_1">1</string>
</resources>