<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signUpOneVM" type="com.saqibhandymanab.app.modules.signupone.data.viewmodel.SignUpOneVM"/>
    </data>
    <LinearLayout android:id="@+id/linearSignUpOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_200">
        <ImageView android:id="@+id/imageArrowleft"
            android:layout_gravity="start"
            android:layout_height="@dimen/_12pxh"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_65pxv"
            android:layout_width="@dimen/_16pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft_gray_800"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_gray_800"/>
        <ImageView android:id="@+id/imageMangardenerdi"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_162pxh"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="@dimen/_162pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_mangardenerdi}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_mangardenerdi"/>
        <TextView android:ellipsize="end" android:id="@+id/txtLabeltext"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_94pxh"
            android:layout_marginStart="@dimen/_94pxh"
            android:layout_marginTop="@dimen/_48pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@{signUpOneVM.signUpOneModel.txtLabeltext}"
            style="@style/txtInterbold14" tools:text="@string/lbl_first_name"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_300_radius_4"
            android:ellipsize="end"
            android:hint="@string/lbl_first_name2"
            android:id="@+id/etFieldcontent" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_9pxv" android:singleLine="true"
            android:text="@={signUpOneVM.signUpOneModel.etFieldcontentValue}"
            android:textColorHint="@color/gray_800"
            style="@style/etSolidRoundedOutline_2" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLabeltextOne"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_94pxh"
            android:layout_marginStart="@dimen/_94pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@{signUpOneVM.signUpOneModel.txtLabeltextOne}"
            style="@style/txtInterbold14" tools:text="@string/lbl_last_name"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_300_radius_4"
            android:ellipsize="end"
            android:hint="@string/lbl_last_name2"
            android:id="@+id/etFieldcontentOne" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_9pxv" android:singleLine="true"
            android:text="@={signUpOneVM.signUpOneModel.etFieldcontentOneValue}"
            android:textColorHint="@color/gray_800"
            style="@style/etSolidRoundedOutline_2" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLabeltextTwo"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_94pxh"
            android:layout_marginStart="@dimen/_94pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@{signUpOneVM.signUpOneModel.txtLabeltextTwo}"
            style="@style/txtInterbold14" tools:text="@string/lbl_email"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_300_radius_4"
            android:ellipsize="end" android:hint="@string/lbl_email2"
            android:id="@+id/etFieldcontentTwo"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_9pxv" android:singleLine="true"
            android:text="@={signUpOneVM.signUpOneModel.etFieldcontentTwoValue}"
            android:textColorHint="@color/gray_800"
            style="@style/etSolidRoundedOutline_2" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLabeltextThree"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_94pxh"
            android:layout_marginStart="@dimen/_94pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@{signUpOneVM.signUpOneModel.txtLabeltextThree}"
            style="@style/txtInterbold14" tools:text="@string/lbl_password"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_300_radius_4"
            android:ellipsize="end"
            android:hint="@string/msg_at_leat_8_chara"
            android:id="@+id/etFieldcontentThree"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_9pxv" android:singleLine="true"
            android:text="@={signUpOneVM.signUpOneModel.etFieldcontentThreeValue}"
            android:textColorHint="@color/gray_800"
            style="@style/etSolidRoundedOutline_2" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLabeltextFour"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_94pxh"
            android:layout_marginStart="@dimen/_94pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@{signUpOneVM.signUpOneModel.txtLabeltextFour}"
            style="@style/txtInterbold14" tools:text="@string/lbl_repeat_password"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_300_radius_4"
            android:ellipsize="end"
            android:hint="@string/msg_at_leat_8_chara"
            android:id="@+id/etFieldcontentFour"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_9pxv" android:singleLine="true"
            android:text="@={signUpOneVM.signUpOneModel.etFieldcontentFourValue}"
            android:textColorHint="@color/gray_800"
            style="@style/etSolidRoundedOutline_2" tools:ignore="Autofill"/>
        <LinearLayout android:id="@+id/linearSignUp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_61pxv"
            android:layout_width="wrap_content"
            android:orientation="vertical" style="@style/groupStylecornerRadius_1">
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSignUp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@string/lbl_sign_up"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_sign_up"/>
            <TextView android:ellipsize="end" android:gravity="end"
                android:id="@+id/txtConfirmation"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_34pxh"
                android:layout_marginStart="@dimen/_34pxh"
                android:layout_marginTop="@dimen/_34pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{signUpOneVM.signUpOneModel.txtConfirmation}"
                style="@style/txtInterregular12_3" tools:text="@string/msg_already_have_an"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguage"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_87pxh"
                android:layout_marginStart="@dimen/_87pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@{signUpOneVM.signUpOneModel.txtLanguage}"
                style="@style/txtInterregular16_3" tools:text="@string/lbl_log_in2"/>
        </LinearLayout>
    </LinearLayout>
</layout>
