<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="chatsOneRowModel" type="com.saqibhandymanab.app.modules.chatsone.data.model.ChatsOneRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowareyouthere"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <ImageView android:id="@+id/imageImage"
            android:layout_height="@dimen/_60pxh"
            android:layout_width="@dimen/_56pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_28pxh}"
            imageRes="@{@drawable/img_image}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_image"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnvernonpowell"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_weight="0.83" android:layout_width="0dp" android:orientation="vertical">
            <LinearLayout android:id="@+id/linearRowvernonpowell"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtVernonPowell"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="0.83"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{chatsOneRowModel.txtVernonPowell}"
                    style="@style/txtInterbold18" tools:text="@string/lbl_thomas_lukas2"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtGroupFive"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginStart="@dimen/_117pxh"
                    android:layout_weight="0.17"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:paddingBottom="@dimen/_1pxv"
                    android:paddingEnd="@dimen/_9pxh"
                    android:paddingStart="@dimen/_10pxh"
                    android:paddingTop="@dimen/_1pxv"
                    android:singleLine="true"
                    android:text="@{chatsOneRowModel.txtGroupFive}"
                    style="@style/txtSolidRounded_3" tools:text="@string/lbl_1"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAreyouthere"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{chatsOneRowModel.txtAreyouthere}"
                style="@style/txtInterregular14_1" tools:text="@string/lbl_are_you_there"/>
        </LinearLayout>
    </LinearLayout>
</layout>
